force-app/main/default/objects/custom_create356__c/custom_create356__c.object-meta.xml
<CustomObject>
    <label>Custom created object356</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects356</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>