force-app/main/default/objects/custom_create356__c/fields/custom_create_356field614__c.field-meta.xml
<CustomField>
    <fullName>custom_create_356field614__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 356field614</label>
    <type>Checkbox</type>
</CustomField>