force-app/main/default/objects/custom_create356__c/fields/custom_create_356field633__c.field-meta.xml
<CustomField>
    <fullName>custom_create_356field633__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 356field633</label>
    <type>Checkbox</type>
</CustomField>